# vio

./: CMakeLists.txt  README.md
config/: euroc_config.yaml  myslam_config.yaml
include/backend/: edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h
src/: System.cpp  estimator.cpp  feature_manager.cpp  parameters.cpp
src/backend/: edge.cpp  edge_prior.cpp  edge_reprojection.cpp  imu_integration.cpp  loss_function.cpp  problem.cpp
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
test/: CurveFitting.cpp  run_euroc.cpp  run_myslam.cpp
